[tool.poetry]
name = "carabas"
version = "0.0.1"
description = "Online Judge system for practicing programming"
authors = ["Kirill Diduk <kirill.diduk@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = ">=0.117.0,<0.118.0"
uvicorn = ">=0.37.0,<0.38.0"
jinja2 = ">=3.1.0,<3.2.0"
